syntax = "proto3";

package grpc_cache;

option go_package = "protos/grpc_cache";

service CacheService {
  // Método para obtener un valor de la caché
  rpc GetFromCache(GetFromCacheRequest) returns (GetFromCacheResponse) {}

  // Método para escribir un valor en la caché
  rpc SetInCache(SetInCacheRequest) returns (SetInCacheResponse) {}
}

message GetFromCacheRequest {
  string key = 1;
}

message GetFromCacheResponse {
  string value = 1;
}

message SetInCacheRequest {
  string key = 1;
  string value = 2;
}

message SetInCacheResponse {
  bool success = 1;
}

service DatabaseService {
  // Método para obtener un valor de la base de datos
  rpc GetFromDatabase(GetFromDatabaseRequest) returns (GetFromDatabaseResponse) {}
}

message GetFromDatabaseRequest {
  string key = 1;
}

message GetFromDatabaseResponse {
  string value = 1;
}